0.4.0-SNAPSHOT
==============
- Changed to Java 7 and updated some maven dependencies
- Implemented/migrated multi-threading for the stepper (Pjotr)
- SAP-Space optimization: Avoid collision detection for immobile bodies (Pjotr)


0.3.1
=====
- Announcement: This will be the last release build with Java 6! 
- Convex vs trimesh collision improvement for concave trimeshes, PR #51 (Piotr)
- Quickstep improvements, also fixes issue with DemoFeedback, PR #50 (Piotr)
- Added more stable cylinder stacking, PR #47 (Piotr)
- Deprecated DxSpace.getGeom(i) to fix compilation failure (TZ)
- Ported libccd updates, PR #45 (Piotr)
- Added new SAP space, PR #43 (Piotr)
- Fixes on SAP space, PR #42 (Piotr)
- Fixes on removing geoms from space, PR #41 (Piotr)
- Added support for convex-trimesh collision (Piotr)
- Fixed scaling of tacc in quickstep (issue #38, Eduard Nicodei)
- Fixed Common.__ASSERT methods to act correctly if parameter is '0' or 'false', see issue #32
- Removed unnecessary Common.__ASSERT calls if NPE would trivially be thrown by code below, see #32 
- Fixed mode checking in dJointSetTransmissionAxis2(), see issue #33
- Test and fix for issue #31  (NPE in ragdoll)
- Added support for heightfiels with holes (DxTrimeshHeightField)
- Added support for the slf4j loggin API (TZ)
- Added Ragdoll support and ConstrainedBallJoint (Piotr)
- Added sorting of contact by penetration depth (Piotr), see issue #22
- Added TrimeshHeightfield provided by Piotr
- Fixed issue #19 (thanks to Piotr)

- Fixed issue #17
- Fixed NPE in DemoBoxStack-'x'
- Added newArray(size) methods to DVector3 and DMatrix3


0.3.0
=====
Migration to 0.13.1

New:
-- 3 new joints: DoubleBall, DoubleHinge, Transmission
-- New demos: DoubleBall, DoubleHinge, Gyro2, RFriction, Transmission
-- Multithreading (well...)

Done:
-- main code
-- tests 
-- demos
-- Fixed bug in dMatrix3Inv() --> Calculation was incorrect
-- Fixed bug in DObject --> destroying joints might have crashed