@@ -3,6 +3,8 @@
 - Changed to Java 7 and updated some maven dependencies
 - Implemented/migrated multi-threading for the stepper (Pjotr)
 - SAP-Space optimization: Avoid collision detection for immobile bodies (Pjotr)
+- New BVH tree for better scalability with many bodies, ported from the Turbulenz Engine (Pjotr)
+
 
 
 0.3.1
